2009-06-29  Murray Cumming  <murrayc@murrayc.com>

	Allow many fields to be added to layouts (or the export format) at once.
	
	* glom/mode_data/dialog_choose_field.[h|cc]: Added get_fields_list() in 
	addition to the existing get_field_list(), and allow multiple selection.
	* glom/base_db.[h|cc]: offer_field_list(): Rename to 
	offer_field_list_select_one_field().
	Added offer_field_list() that returns a list of fields, allowing multiple 
	selection.

	* *.[h|cc]: Adapted to use the appropriate function, allowing, for instance, 
	the export dialog to use multiple selection to add many fields at once.

	Ubuntu Launchpad bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/393231
	(elmergato)
	
2009-06-29  Murray Cumming  <murrayc@murrayc.com>

	Export: Offer File overwrite confirmation.
	
	* glom/frame_glom.cc: on_menu_file_export():
	* glom/translation/window_translations.cc: on_button_export(): 
	Call Gtk::FileChooser::set_do_overwrite_confirmation() so the user is 
	warned when overwriting a file.
	Ubuntu Launchpad bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/393229
	(elmergato)

2009-06-29  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/spawn_with_feedback.cc: ifdef out the debug output.

2009-06-29  Murray Cumming  <murrayc@murrayc.com>

	Reduce debug output.
	
	* glom/libglom/data_structure/glomconversions.[h|cc]: 
	sanity_check_date_text_representation_uses_4_digit_years(): Make the debug 
	output optional.
	* glom/main.cc: Added a --debug-date-check option, to avoid the debug out 
	about 4-digit dates normally.
	
	* glom/dialog_existing_or_new.cc: list_examples_at_path(): Comment out debug 
	output.
	* glom/libglom/connectionpool.cc: connect(): Comment out debug output that 
	showed the (previously slow) meta update calls.
	
2009-06-28  Murray Cumming  <murrayc@murrayc.com>

	Print exception messages to stdout.

	* ldtp/database-creation/create-db.py: When catching the exception, 