@@ -1,3 +1,11 @@
+2009-06-30  Murray Cumming  <murrayc@murrayc.com>
+
+	get_table_names_from_database(): Remove quotes.
+	
+	* glom/base_db.cc: get_table_names_from_database(): Remove quotes when they 
+	are (sometimes) in the meta data. I complained on the gnome-db mailing list 
+	about us having to do this.
+
 2009-06-29  Murray Cumming  <murrayc@murrayc.com>
 
 	Allow many fields to be added to layouts (or the export format) at once.
